--- a/example/src/index.html
+++ b/example/src/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<h1>css3-reactmenu</h1>
-		<h2><a href="https://github.com/vishnuvardhana/css3-reactmenu">View project on GitHub</a></h2>
+		<h1>css-reactmenu</h1>
+		<h2><a href="https://github.com/vishnuvardhana/css-reactmenu">View project on GitHub</a></h2>
 		<!-- the example app is rendered into this div -->
 		<div id="app"></div>
 		<div class="hint">
